--- a/client/src/components/videos/VideoPage.css
+++ b/client/src/components/videos/VideoPage.css
@@ -1,9 +1,9 @@
-.video-container {
-
-}
-
 .title {
 	font-size: 20px;
 	margin: 20px;
 	margin-bottom: 0px;
+}
+
+.heart-icon {
+	cursor: pointer;
 }
